--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,6 +12,14 @@
     android:id="@+id/main">
 
     <Button
+        android:id="@+id/button_browser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_label_browser"
+        android:backgroundTint="#CE0CBD"
+
+        />
+    <Button
         android:id="@+id/button_toast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,7 +39,6 @@
         android:background="#FFFF00"
         android:gravity="center"
         android:layout_below="@id/button_toast"
-        android:layout_marginTop="30dp"
         />
 
     <Button
@@ -42,15 +49,22 @@
         android:backgroundTint="#CE0CBD"
         android:layout_toRightOf="@id/button_toast"
         />
-    
+
     <Button
-        android:id="@+id/button_count"
+        android:id="@+id/button_tambah"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_label_count"
+        android:text="@string/button_label_count_up"
         android:backgroundTint="#CE0CBD"
         android:layout_toRightOf="@id/button_toast"
         />
-
+    <Button
+        android:id="@+id/button_kurang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_label_count_down"
+        android:backgroundTint="#CE0CBD"
+        android:layout_toRightOf="@id/button_toast"
+        />
 
 </LinearLayout>
